--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
 .csharp {
   display: none;
 }
+.form {
+  display: none;
+}
 .header {
   text-align: center;
   margin-top: 70px;
@@ -57,4 +60,24 @@ input[type=submit] {
   margin: auto;
   display:block;
   margin-bottom: 20px;
+}
+
+.header p {
+  overflow: hidden;
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  animation: 
+    typing 2s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: rgb(41, 236, 41);
 }
